--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "@vercel/speed-insights": "^1.3.1",
     "bcryptjs": "^2.4.3",
     "leaflet": "^1.9.4",
-    "next": "14.0.4",
+    "next": "^14.2.35",
     "next-auth": "^4.24.13",
     "next-intl": "^4.5.6",
-    "nodemailer": "^7.0.10",
+    "nodemailer": "^7.0.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1"
